--- a/styles/gallery.scss
+++ b/styles/gallery.scss
@@ -35,6 +35,13 @@
 
 }
 
+.bottom-box {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+  justify-content: space-between;
+}
+
 .map-box:hover {
   box-shadow: 10px 10px rgb(184, 184, 185);
 }
@@ -55,6 +62,8 @@ img {
   font-size: x-large;
   color: #000;
   padding-top: 10px;
+  width: 70%;
+  margin-left: 15px;
 }
 
 @media only screen and (min-width: 1300px) {
@@ -72,3 +81,15 @@ img {
     left: 5%;
   }
 }
+
+.fa-heart {
+  font-size: 33px;
+  padding-top: 8px;
+  color: lightgray;
+  z-index: 1;
+}
+
+.fa-heart:checked {
+  color: rgb(173, 28, 28);
+}
+
