--- a/styles/nav-bar.scss
+++ b/styles/nav-bar.scss
@@ -21,3 +21,19 @@
   border: none;
   background-color: #247ba0;
 }
+
+
+.navbar-brand {
+  margin-top: 8px;
+}
+
+.brand {
+    margin-top: -1px;
+    font-size: 24px;
+    margin-right: 12px;
+    color: white;
+}
+
+.btn-danger {
+margin-top: 5px;
+}
