--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -18,8 +18,10 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-<script type="text/javascript" src="/scripts/app.js"></script>
+<script type="text/javascript" src="/scripts/app.js"></script>]
 
+   <!-- fontawesome library -->
+   <script src="https://kit.fontawesome.com/88dc62d230.js" crossorigin="anonymous"></script>
 
 
 <link
