--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark">
   <div class="access-buttons">
-    <a class="navbar-brand" href="/">WikiMap</a>
+    <a class="brand" href="/">WikiMap</a>
     <!-- <form class="form-inline mb-2" action="/api/create" method="GET"> -->
     <!-- <div class="form-group"> -->
 
