--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -13,14 +13,10 @@
 <link rel="stylesheet" href="/styles/map-modal-form.css" type="text/css" />
 <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
 <link rel="stylesheet" href="/styles/map.css" type="text/css" />
-<link rel="stylesheet" href="/styles/gallery.css" type="text/css" />
-<link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-<link rel="stylesheet" href="/styles/profile.css" type="text/css" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <script type="text/javascript" src="/scripts/app.js"></script>
-
 
 <link
   rel="stylesheet"
@@ -33,3 +29,11 @@
   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
   crossorigin=""
 ></script>
+<!-- Font Awesome -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+  integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
