--- a/views/gallerypages.ejs
+++ b/views/gallerypages.ejs
@@ -29,16 +29,8 @@
     <%- include('partials/_header') %>
 
     <div class="gallery">
-      <% for(let map of gallerymaps) { %> <<<<<<< HEAD
-      <a class="map-box" href="/maps/<%= gallerymaps[map]['id'] %>">
-        <div class="pic">
-          <img
-            src="https://images.unsplash.com/photo-1553864250-05b20249ee0c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFwc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
-          />
-        </div>
-        <div class="map-name"><%= gallerymaps[map]['name'] %></div>
-      </a>
-      =======
+      <% for(let map of gallerymaps) { %>
+
       <a class="map-box" href="/maps/<%= map['id'] %>">
         <div class="pic">
           <img
@@ -55,7 +47,7 @@
           </div>
         </div>
       </a>
-      >>>>>>> 6a44e90af903e3a10c94bee61b48d52ee109c3de <% } %>
+      <% } %>
     </div>
     <%- include('partials/_foot-scripts') %> <%- include('partials/_footer') %>
   </body>
