--- a/styles/map.scss
+++ b/styles/map.scss
@@ -38,6 +38,7 @@ label {
  margin-left: 30px;
  width: 50px;
  font-size: 33px;
+ cursor: pointer;
 }
 
 
@@ -49,6 +50,9 @@ label {
   display: flex;
   justify-content: space-around;
   margin-top: 0;
+  width: auto;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 .leaflet-container {
