--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -1,9 +1,16 @@
 
 .user-bit {
-  padding-top: 20px;
+
   text-align: center;
   font-family: 'Rampart One', cursive;
   font-size: 48px;
+  border-radius: 10px;
+  border-color: black;
+  box-shadow: 10px 10px 10px rgb(184, 184, 185);
+  width: 50%;
+  margin: auto;
+  margin-top: 50px;
+  background-color: rgb(218, 206, 206);
 }
 
 
@@ -23,8 +30,9 @@
   font-weight: bolder;
   font-size: xx-large;
   font-family: 'Indie Flower', cursive;
-  background-color: rgb(201, 173, 14);
+  background-color: rgb(228, 182, 30);
   color: rgb(125, 136, 146);
+  opacity: 70%;
 
 }
 
@@ -33,20 +41,24 @@
   font-family: 'Indie Flower', cursive;
   font-size: larger;
   background-color: white;
+  opacity: 70%;
 }
 
 
 .favs-table {
   width: 300px;
+  box-shadow: 10px 10px rgb(184, 184, 185);
 }
 
 .contribs-table {
   width: 300px;
+  box-shadow: 10px 10px rgb(184, 184, 185);
+  border: transparent;
 }
 
 .contribs-table {
   border-collapse:separate;
-  border:solid black 1px;
+  border:solid transparent 1px;
   border-radius:6px;
   -moz-border-radius:6px;
   margin: auto;
@@ -57,8 +69,8 @@
 }
 
 td, th {
-  border-left:solid black 1px;
-  border-top:solid black 1px;
+  border-left:solid transparent 1px;
+  border-top:solid transparent 1px;
 
 
 }
@@ -66,6 +78,7 @@ td, th {
 th {
   border-top: none;
   font-size: larger;
+  border-radius: 10px 10px 0 0;
 
 }
 
@@ -76,7 +89,7 @@ td:first-child, th:first-child {
 
 .favs-table {
   border-collapse:separate;
-  border:solid black 1px;
+  border:solid transparent 1px;
   border-radius:6px;
   -moz-border-radius:6px;
   margin: auto;
@@ -103,3 +116,5 @@ td:first-child, th:first-child {
    border-left: none;
 
 }
+
+
