--- a/views/gallerypages.ejs
+++ b/views/gallerypages.ejs
@@ -30,12 +30,14 @@
 
     <div class="gallery">
       <% for(let map of gallerymaps) { %>
-
       <a class="map-box" href="/maps/<%= map['id'] %>">
         <div class="pic">
+          <div class= icon-box>
+              <i class="far fa-trash-alt"></i>
           <img
             src="https://images.unsplash.com/photo-1553864250-05b20249ee0c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFwc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
           />
+        </div>
           <div class="bottom-box">
             <div class="map-name"><%= map['name'] %></div>
             <i
