Create readme file and fix pins and style bugs

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -2,7 +2,7 @@
 
 body,
 html {
-  margin: 0 auto;
+  margin: 2.2em auto;
   background-color: lightgrey;
   max-width: 1240px;
 }
@@ -15,7 +15,3 @@ html {
   flex-direction: column;
   overflow-y: scroll;
 }
-
-
-
-
