--- a/views/map.ejs
+++ b/views/map.ejs
@@ -28,10 +28,12 @@
          </div>
 
           <div class="fav-button"></div>
-
-          <div class="alert alert-danger" role="alert" id="empty-search">
+         <div id="empty-search">
+          <div class="alert alert-danger" role="alert">
             Please enter a valid address to search!
           </div>
+         </div>
+
 
           <form class="form-inline my-2 my-lg-0" id="search-form">
             <input
