--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark footer">
+<nav class="navbar fixed-bottom navbar-expand-md navbar-dark footer">
   <div class="navbar-nav">
     <a class="nav-item nav-link" href="/">All Maps</a>
     <a class="nav-item nav-link" href="/user/maps">My Maps</a>
