--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark">
+<nav class="navbar fixed-top navbar-expand-md navbar-dark sticky">
   <div class="access-buttons">
     <a class="brand" href="/">WikiMap</a>
     <!-- <form class="form-inline mb-2" action="/api/create" method="GET"> -->
